// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component renders correctly with defaults and  1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "elevation": 100,
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "hsla(0, 0%, 0%, 0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "hsl(0, 100%, 100%)",
          "borderRadius": 8,
          "marginHorizontal": 60,
          "maxWidth": 500,
          "paddingBottom": 36,
          "paddingHorizontal": 36,
          "paddingTop": 52,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(0, 0%, 0%)",
            },
            Object {
              "fontSize": 24,
              "fontWeight": "300",
              "letterSpacing": 0,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "paddingBottom": 12,
            },
          ]
        }
      >
        bob
      </Text>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingTop": 52,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Dialog component renders correctly with defaults and hidden 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "elevation": 100,
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "hsla(0, 0%, 0%, 0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "hsl(0, 100%, 100%)",
          "borderRadius": 8,
          "marginHorizontal": 60,
          "maxWidth": 500,
          "paddingBottom": 36,
          "paddingHorizontal": 36,
          "paddingTop": 52,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(0, 0%, 0%)",
            },
            Object {
              "fontSize": 24,
              "fontWeight": "300",
              "letterSpacing": 0,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "paddingBottom": 12,
            },
          ]
        }
      >
        bob
      </Text>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingTop": 52,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Dialog component renders correctly with props 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "elevation": 100,
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "hsla(0, 0%, 0%, 0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "hsl(0, 100%, 100%)",
          "borderRadius": 8,
          "marginHorizontal": 60,
          "maxWidth": 500,
          "paddingBottom": 36,
          "paddingHorizontal": 36,
          "paddingTop": 52,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "hsl(0, 0%, 0%)",
            },
            Object {
              "fontSize": 24,
              "fontWeight": "300",
              "letterSpacing": 0,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "paddingBottom": 12,
            },
          ]
        }
      >
        nope
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "hsl(0, 0%, 0%)",
            },
            Object {
              "fontSize": 14,
              "fontWeight": "300",
              "letterSpacing": 0.25,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        yep
      </Text>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingTop": 52,
            },
            Object {
              "display": "none",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "hsl(211, 100%, 50%)",
              "flex": 1,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "center",
              "marginRight": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "hsl(0, 0%, 0%)",
                },
                Object {
                  "fontSize": 14,
                  "fontWeight": "600",
                  "letterSpacing": 0.75,
                },
                Object {
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "hsl(211, 100%, 50%)",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            BIRD
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": "hsl(211, 100%, 50%)",
              "flex": 1,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "center",
              "marginLeft": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "hsl(0, 0%, 0%)",
                },
                Object {
                  "fontSize": 14,
                  "fontWeight": "600",
                  "letterSpacing": 0.75,
                },
                Object {
                  "textAlign": "center",
                },
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "hsl(211, 100%, 50%)",
                  },
                  undefined,
                  Object {
                    "color": "hsl(208, 7%, 46%)",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ],
              ]
            }
          >
            DOG
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
